2004-10-12  Matthias Wimmer  <m@tthias.net>

    * jabberd/jabberd.c: restored 1.4.3 behaviour of -D option, new one is -d
    * jsm/authreg.c: locking the udata structure in some cases
    * jsm/deliver.c: same
    * jsm/server.c: same
    * jsm/users.c: We don't have to convert to lowercase if libidn already did

2004-10-06  Matthias Wimmer  <m@tthias.net>

    * dialback/dialback_in.c: When trashing timed-out db queries, we sent
	invalid db:results, that did not contain a type='invalid' attribute
    * jsm/modules/mod_stat.c: Use instance memory pool for memory allocation

2004-10-05  Matthias Wimmer  <m@tthias.net>

    * dialback/dialback_in.c: Changed duplicate error messages
    * dialback/dialback_out.c: same

2004-09-28  Matthias Wimmer  <m@tthias.net>

    * jabberd/lib/jabberdlib.h: added STARTTLS support for c2s conns
    * pthsock/client.c: same

2004-09-27  Matthias Wimmer  <m@tthias.net>

    * dialback/dialback_in.c: added STARTTLS support for s2s conns
    * dialback/dialback_out.c: same
    * jabberd/jabberd.h: added support in MIO to enable TLS on existing conn
    * jabberd/mio_ssl.c: same
    * jabberd/mio_xml.c: same
    * jabberd/lib/jabberdlib.h: added namespace decl for STARTTLS feature
    * jsm/modules/mod_auth_plain.c: username check only for updates

2004-09-24  Matthias Wimmer  <m@tthias.net>

    * jsm/modules/mod_auth_digest.c: Bugfix. jabber:iq:register set with empty
	<password/> element made an existing account unusable, as it lost its
	password.
    * jsm/modules/mod_auth_plain.c: same

2004-09-21  Matthias Wimmer  <m@tthias.net>

    * xdb_file/xdb_file.c: Make hashed spool directories optional

2004-09-07  Matthias Wimmer  <m@tthias.net>

    * jsm/modules/mod_offline.c: ignore CDATA between offline <message/>s
    * jsm/modules/mod_roster.c: we lost the pending_in state at a roster set

2004-09-06  Matthias Wimmer  <m@tthias.net>

    * jsm/modules/mod_roster.c: XMPP IM's way to handle subscription states
